@@ -9,11 +9,11 @@
 #include "TileTypes.h"
 
 #include "modules/Gui.h"
-#include "modules/MapCache.h"
 #include "modules/Maps.h"
 #include "modules/Materials.h"
 
 #include "df/inorganic_raw.h"
+#include "df/map_block.h"
 #include "df/region_map_entry.h"
 #include "df/world.h"
 #include "df/world_data.h"
@@ -110,8 +110,6 @@ command_result changelayer (color_ostream &out, std::vector <std::string> & para
     }
 
 
-    MapExtras::MapCache mc;
-
     int32_t regionX, regionY, regionZ;
     Maps::getPosition(regionX,regionY,regionZ);
 
@@ -124,18 +122,18 @@ command_result changelayer (color_ostream &out, std::vector <std::string> & para
     }
     DFCoord cursor (cursorX,cursorY,cursorZ);
 
-    MapExtras::Block * b = mc.BlockAt(cursor/16);
-    if(!b || !b->is_valid())
+    df::map_block *b = Maps::getTileBlock(cursor);
+    if(!b)
     {
         out.printerr("No data.\n");
         return CR_OK;
     }
 
-    df::tile_designation des = b->DesignationAt(cursor%16);
+    auto des = Maps::getTileDesignation(cursor);
 
     // get biome and geolayer at cursor position
-    uint32_t biome = des.bits.biome;
-    uint32_t layer = des.bits.geolayer_index;
+    uint32_t biome = des->bits.biome;
+    uint32_t layer = des->bits.geolayer_index;
     if(verbose)
     {
         out << "biome: " << biome << endl
@@ -164,7 +162,7 @@ command_result changelayer (color_ostream &out, std::vector <std::string> & para
     {
         if(verbose)
             out << "---Biome: " << i;
-        if(!all_biomes && uint32_t(i)!=biome)
+        if(!all_biomes && i!=b->region_offset[biome])
         {
             if(verbose)
                 out << "-skipping" << endl;
@@ -180,10 +178,10 @@ command_result changelayer (color_ostream &out, std::vector <std::string> & para
         // regionX is in embark squares
         // regionX/16 is in 16x16 embark square regions
         // i provides -1 .. +1 offset from the current region
-        int bioRX = world->map.region_x / 16 + ((i % 3) - 1);
+        int bioRX = (cursorX / 48 + regionX) / 16 + ((i % 3) - 1);
         if (bioRX < 0) bioRX = 0;
         if (bioRX >= world->world_data->world_width) bioRX = world->world_data->world_width - 1;
-        int bioRY = world->map.region_y / 16 + ((i / 3) - 1);
+        int bioRY = (cursorY / 48 + regionY) / 16 + ((i / 3) - 1);
         if (bioRY < 0) bioRY = 0;
         if (bioRY >= world->world_data->world_height) bioRY = world->world_data->world_height - 1;
 
